[package]
name = "otway"
version = "0.1.0"
authors = ["jazzfool <saveuselon@gmail.com>"]
edition = "2018"

[features]
default = ["kit", "themes", "app"]
kit = []
themes = ["kit"]
app = ["glutin", "reclutch/skia", "kit"]

[dependencies]
reclutch = { git = "https://github.com/jazzfool/reclutch" }
uniq = { git = "https://github.com/reclutch-nursery/uniq", features = ["id"] }
glutin = { version = "0.24", optional = true }
thiserror = "1.0"
derivative = "2.1"
as-any = "0.2"
